--- a/css/index_media.css
+++ b/css/index_media.css
@@ -219,12 +219,10 @@
   padding-left:0px;
   display:inline;
 }
-
 #box06 .box>form{
   width:77.85714285714286%/* 445px */;
   margin-right:0;
   margin: 0 auto;
-
 }
 /* aside */
 aside .sument{
@@ -235,4 +233,39 @@ aside .top{
 }
 /*  */
 }
-@media screen and (max-width:579px){}
+@media screen and (max-width:579px){
+  header>div{
+    display:block;
+    text-align:center;
+    }
+    header>div>h1>a{
+      font-family:'나눔고딕',sans-serif;
+      color:#fff;
+      font-size:30px;
+    }
+    nav{
+      position:fixed;
+      /* left:-100%; */
+      left:0;
+      top:0;
+      width:100%;
+      height:100%;
+      background-color:rgba(0,0,0,0.8);
+      z-index:999;
+      padding:36px;
+      box-sizing:border-box;
+    }
+    nav>ul{
+      width:100%; height:100%;
+      display:flex;
+      justify-content: center;
+      align-items:center;
+      flex-direction: column;
+    }
+    nav>ul>li{
+      display:block;
+      /* 문제가 없어서 통과 */
+      margin-left:0;
+    }
+
+}
